# Weatherapp_innlevering

./: CMakeLists.txt  ForecastModel.qml  GetWeatherForUser.js  Main.qml  README.md  ShowResults.js  WeatherDetails.qml  WeatherSearch.qml  currentweather.cpp  currentweather.h  darkModeSwitch.qml  dayinfo.cpp  dayinfo.h  main.cpp  modelcontroller.cpp  modelcontroller.h  weatherinfo.cpp  weatherinfo.h
